--- a/scATAC_seq_(1)_scVI_exec.ipynb
+++ b/scATAC_seq_(1)_scVI_exec.ipynb
@@ -551,6 +551,42 @@
       "outputs": []
     },
     {
+      "source": [
+        "import os"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "vFKgiCG4Ie4A"
+      },
+      "id": "vFKgiCG4Ie4A",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tempfile"
+      ],
+      "metadata": {
+        "id": "14_I-Ateerz0"
+      },
+      "id": "14_I-Ateerz0",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shutil"
+      ],
+      "metadata": {
+        "id": "sFwha3YBetK5"
+      },
+      "id": "sFwha3YBetK5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "dcOaUOy_XTwY"
@@ -567,10 +603,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7762319c-c60f-4974-e6f4-c2fd2b4a25e4",
         "id": "DvMbe3pJXTwY"
       },
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "id": "DvMbe3pJXTwY"
     },
     {
@@ -672,11 +720,8 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "source": [
-        "import os\n",
-        "import tempfile\n",
-        "import shutil\n",
-        "\n",
         "# Create a temporary directory if save_dir is not defined\n",
         "save_dir = tempfile.TemporaryDirectory()\n",
         "\n",
@@ -694,11 +739,10 @@
         "\n",
         "print(f\"Model saved to: {drive_path}\")"
       ],
-      "cell_type": "code",
       "metadata": {
-        "id": "vFKgiCG4Ie4A"
+        "id": "jWubh2qGen9O"
       },
-      "id": "vFKgiCG4Ie4A",
+      "id": "jWubh2qGen9O",
       "execution_count": null,
       "outputs": []
     },
