--- a/scATAC_seq_(1)_scVI_exec.ipynb
+++ b/scATAC_seq_(1)_scVI_exec.ipynb
@@ -1062,15 +1062,15 @@
         "\n",
         "# Create separate UMAP plots\n",
         "sc.pl.umap(adata_treated, color=PEAKVI_CLUSTERS_KEY, title='Treated w/AOA')\n",
-        "sc.pl.umap(adata_untreated, color=PEAKVI_CLUSTERS_KEY, title='Untreated Condition')"
+        "sc.pl.umap(adata_untreated, color=PEAKVI_CLUSTERS_KEY, title='Untreated')"
       ],
       "metadata": {
-        "id": "H7Wagd0zz8Ut",
-        "outputId": "81536ce0-8f57-46aa-c4db-1e3ee26653ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 879
-        }
+        },
+        "id": "H7Wagd0zz8Ut",
+        "outputId": "81536ce0-8f57-46aa-c4db-1e3ee26653ba"
       },
       "id": "H7Wagd0zz8Ut",
       "execution_count": 70,
@@ -1108,10 +1108,10 @@
           "height": 455
         },
         "id": "KrTP3y4hTryZ",
-        "outputId": "7004aad0-966c-40ad-a70f-0c8761ce6370"
+        "outputId": "823862e8-969c-45f8-b853-efb78fabdd3e"
       },
       "id": "KrTP3y4hTryZ",
-      "execution_count": 57,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1149,7 +1149,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-595dc053-c508-4e25-9c14-ac1a64856bc4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cd067f36-b255-49e0-9c4a-a80c254a9547\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1318,7 +1318,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-595dc053-c508-4e25-9c14-ac1a64856bc4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cd067f36-b255-49e0-9c4a-a80c254a9547')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1370,12 +1370,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-595dc053-c508-4e25-9c14-ac1a64856bc4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-cd067f36-b255-49e0-9c4a-a80c254a9547 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-595dc053-c508-4e25-9c14-ac1a64856bc4');\n",
+              "        const element = document.querySelector('#df-cd067f36-b255-49e0-9c4a-a80c254a9547');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1395,8 +1395,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2647db7c-ef74-4aca-a7b1-10b87ae1a13d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2647db7c-ef74-4aca-a7b1-10b87ae1a13d')\"\n",
+              "<div id=\"df-32b8d2db-2fec-4755-b965-e1620faebe74\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-32b8d2db-2fec-4755-b965-e1620faebe74')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1515,7 +1515,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2647db7c-ef74-4aca-a7b1-10b87ae1a13d button');\n",
+              "        document.querySelector('#df-32b8d2db-2fec-4755-b965-e1620faebe74 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1531,9 +1531,19 @@
             }
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 71
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_lzT-qC-FXyj"
+      },
+      "id": "_lzT-qC-FXyj",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
