--- a/scATAC_seq_(1)_scVI_exec.ipynb
+++ b/scATAC_seq_(1)_scVI_exec.ipynb
@@ -31,7 +31,7 @@
         "(3) Compute TSS enrichment\n",
         "(4) Filter cell counts based on TSSe\n",
         "(5) Create cell by bin matrix based on 500 bp wide bins accross the whole genome\n",
-        "(6) Preprocessed for scvi model\n",
+        "(6) Preprocess for scvi model\n",
         "\n",
         "This file focuses on DA analysis using scvi package."
       ]
@@ -1537,13 +1537,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "adata"
+      ],
       "metadata": {
-        "id": "_lzT-qC-FXyj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_lzT-qC-FXyj",
+        "outputId": "9a9e7557-dc6f-4ca7-c738-8271ea4f7255"
       },
       "id": "_lzT-qC-FXyj",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "AnnData object with n_obs × n_vars = 12007 × 77997\n",
+              "    obs: 'n_fragment', 'frac_dup', 'frac_mito', 'tsse', 'Treatment', '_scvi_batch', '_scvi_labels', 'clusters_peakvi'\n",
+              "    var: 'n_cells'\n",
+              "    uns: '_scvi_uuid', '_scvi_manager_uuid', 'neighbors', 'umap', 'clusters_peakvi', 'clusters_peakvi_colors', 'Treatment_colors'\n",
+              "    obsm: 'fragment_paired', 'X_peakvi', 'X_umap'\n",
+              "    obsp: 'distances', 'connectivities'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
     },
     {
       "cell_type": "markdown",
