--- a/scATAC_seq_(1)_complete.ipynb
+++ b/scATAC_seq_(1)_complete.ipynb
@@ -17,13 +17,21 @@
         "id": "f268332b-53de-4af8-9533-e48c041292f3"
       },
       "source": [
-        "scATAC seq, based on scATAC seq processing Galaxy tutorials (scATAC preprocessing (2), Standard scATAC seq processing pipeline (1) )\n",
+        "scATAC seq, partly based on scATAC seq processing Galaxy tutorials\n",
+        "(1) scATAC preprocessing\n",
+        "https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-preprocessing-tenx/tutorial.html#mapping-reads-to-a-reference-genome,\n",
+        "\n",
+        "(2) Standard scATAC seq processing pipeline\n",
+        "https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-standard-processing-snapatac2/tutorial.html\n",
+        "\n",
         "AD Objects created in Galaxy using customized Galaxy WF with Snapatac2 and imported\n",
-        "(1) https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-preprocessing-tenx/tutorial.html#mapping-reads-to-a-reference-genome, (2) https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-standard-processing-snapatac2/tutorial.html\n",
+        "\n",
         "Data taken from the following NCBI study:\n",
         "Metabolic adaptation pilots the differentiation of human hematopoietic cells (https://www.ncbi.nlm.nih.gov/bioproject/PRJNA1015713)\n",
-        "Import Anndata objects for two biological replicates, SRR26046013 (cells treated with AOA inhibitor) and SRR26046019 (untreated cells)\n",
+        "Import Anndata objects for SRR26046013 (cells treated with AOA inhibitor)\n",
+        "\n",
         "Perform following steps:\n",
+        "Part I: Standard pipeline\n",
         "(1) Import matrices\n",
         "(2) Compute fragment size distribution\n",
         "(3) Compute TSS enrichment\n",
@@ -34,8 +42,14 @@
         "(8) Perform Dim reduction (spectral)\n",
         "(9) Perform Clustering (neighborhood, UMAP, leiden)\n",
         "(10) Create a cell by gene matrix\n",
-        "(11) Concatenate matrices using Inner join\n",
-        "(12) Remove batch effects"
+        "(11) Impute with scanpy and magic\n",
+        "(12) Preprocess according to scanpy flow\n",
+        "Part II: Cell and cluster annotation\n",
+        "(1) Read reference file\n",
+        "(2) Read query file (CBB matrix)\n",
+        "(3) Data integration\n",
+        "(4) Perform label transfer/prediction\n",
+        "(5) Save predicted labels back to original matrix"
       ]
     },
     {
@@ -2728,11 +2742,11 @@
         "data"
       ],
       "metadata": {
-        "id": "-rfHrSvSib9W",
-        "outputId": "497897c5-ec50-4190-be3a-a80e59260e71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-rfHrSvSib9W",
+        "outputId": "497897c5-ec50-4190-be3a-a80e59260e71"
       },
       "id": "-rfHrSvSib9W",
       "execution_count": 111,
@@ -2759,12 +2773,12 @@
         "data.obs"
       ],
       "metadata": {
-        "id": "vwEkW1deiDJS",
-        "outputId": "06e3ebcf-57a6-46fa-d94c-10ae9213154d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
-        }
+        },
+        "id": "vwEkW1deiDJS",
+        "outputId": "06e3ebcf-57a6-46fa-d94c-10ae9213154d"
       },
       "id": "vwEkW1deiDJS",
       "execution_count": 110,
@@ -3167,7 +3181,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Save the predicted cell type labels back to the original cell by bin matrix."
+        "# Save predicted cell type labels back to the original cell by bin matrix."
       ],
       "metadata": {
         "id": "bS6qkxutRosp"
@@ -3192,12 +3206,12 @@
         "query_data.obs"
       ],
       "metadata": {
-        "id": "j4AB6-WglCRh",
-        "outputId": "622a9c1d-9190-4b22-c259-d72d8d5f50f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "j4AB6-WglCRh",
+        "outputId": "622a9c1d-9190-4b22-c259-d72d8d5f50f2"
       },
       "id": "j4AB6-WglCRh",
       "execution_count": 118,
@@ -3604,6 +3618,7 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
+      "toc_visible": true,
       "gpuType": "L4",
       "include_colab_link": true
     },
